Add last half of essay body

--- a/fireflies essay HTML.html
+++ b/fireflies essay HTML.html
@@ -152,7 +152,64 @@
             Turns out the cardiac glycosides in fireflies are extremely similar to the digitalis found in the foxglove plant. These drugs are used to treat congestive heart failure, but they 
             are still basically a steroidal stimulant, so the Brunei certainly were feeling something. Consuming too many fireflies can kill a human, as any high dose of a chemical can turn deadly.  
         </p>
+<h2>
+            Chemistry of Bioluminescence
+        </h2>
+        <p>
+            Regardless of Western or Eastern culture, the fireflies are a shared cultural symbol of magic, death, stars, and the shortness of life itself. 
+            They can be cursed or blessed omens depending on the place, but generally are not considered pests.
+            Because of the partial disturbed, dark habitat a graveyard offers, fireflies do tend to haunt local cemeteries. 
+            This has led to lore associating firefly glow with the souls of the dead in many cultures<cite>(Faust, 2017)</cite>. 
+            Firefly bioluminescence has capture the attention of 20th and 21st century scientists as well. 
+        </p>
+        <p>
+            Scientists in the early 1900's made some astute specualtions on the chemistry and biology of firefly luminescence. Raphael Dubois coined the terms <em>luciferase</em> and <em>luciferin</em>,
+            though the exact chemical compound was still unknown.
+            They did know the production of light involved oxidation and moisture. The tracheol network within the light organ lended to thsi new hypothesis<cite>(McDermott, 1910)</cite>.
+            The enzyme is accurately named afte the latin term lucifer, meaning <q>lightbringer or morning star</q>.
+            When in the presence of magnesium ions, the energy molecule <abbr title="Adenosine Triphosphate">ATP</abbr>, and oxygen, fireflies can produce light.
+            The firefly nervous system controls the intensity and on/off switch for bioluminescence. 
+            The chemicals nitric oxide and hydrogen peroxide also seem to play a role in regualting the on/off switch<cite>(Faust, 2017)(Lewis, 2016)</cite>.
+        </p>
+        <p>
+            All fireflies possess the luciferase gene and can produce an efficient <q>cold light</q> at some point in their development. 
+            Equally or more efficient than an LED bulb, the light produced by this biochemical reaction has 90% energy efficiency. 
+            This means only 10% of the light energy produced is lost as heat, in contrast incandescent bulbs lose 90% of their energy to heat<cite>(McDermott, 1910)(Branchini, 2015)(Faust, 2017)</cite>. 
+            The practical applications of firefly bioluminescence have been tinkered with for generations.
+            For example, during the industrial revolution of the 1900's the diea that <q>living lamps</q> could be useful for coal mining, with no risk of explosion, since very little heat is produced<cite>(McDermott, 1911)</cite>
+        </p>
+        <p>
+            <abbr title="Doctor of Philosophy">Ph.D</abbr> Bruce Branchini of Connecticut College and others from Yale University published an article in 2015 with new insights for the chemistry of firefly bioluminescence.
+            Turns out, the oxygen used in the chemical process involving luciferin and luciferase  utilizes superoxide ions. This is a special type of molecular oxygen that carries an extra electron, making it
+            an extremely reactive chemical. Superoxide is dangerous to many animals, causing cell damage and inflammation. 
+            Most biological systems use antioxidants to combat destructiove chemicals, while fireflies utilize them in reactions with luciferase.
+            The reactions happen very quickly, in a contained environment within the firefly light organ, so cell damage and inflammation is minimal to nonexistent.
+            Uses as a brighter <q>marker molecule</q> are limitless in biomedical research, everything from cancer to bacteria tagging. 
+            In 1910, more than 700 references on the <q>the emission of light by organized bodies</q> existed in the western world, famous figures from Aristotle to Pasteur have contributed to the subject. 
+            Scientists were aware of luminescence in bacteria, mold, fungi, marigolds, dinoflagellates, ctenophores, and bivalves. 
+            Branchini and other collaborators are next looking into the chemistry of bioluminescence in worms and plankton(Branchini, 2015)(McDermott, 1911).
+        </p>
 
+        <h2>
+            Conclusion: Threats and Conservation
+        </h2>
+        <p>
+            While no formal journal article of declining firefly populations has been published, there is a lot of sentiment from enthusiasts and field researchers that there are notable changes happening.
+            An effort to document firefly populations around the United States was started by the Boston Museum of Natural History in 2008 as a citizen scientist project. 
+            The <q>Firefly Watch</q> project will be continued through the Massachusetts Audobon Society and nearby Tufts University starting in the spring of 2018<cite>(Mass Audobon, 2018)</cite>. 
+            All of the observations reported from 2008 through 2016 are available to download on their website. 
+            Most studies have been done on adult fireflies in moist habitats, so identification of larvae is largely unexplored academic territory<cite>(Luk, Marshall, Branham, 2011)</cite>. 
+            While this project is only focused on bioluminescent adults, it is a major step in understanding how firefly populations are changing. 
+        </p>
+        <p>
+            Since the lifecycle of the firefly takes place in the ground, water, and air, they serve as good <q>indicator species</q> to the state of the surrounding environment. 
+            Possible factors affecting firefly populations include: artificial light pollution, habitat destruction for housing development, and overuse of agricultural or ornamental lawn pesticides<cite>(Faust, 2017)</cite>. 
+            The flightless females and larval habitats are often overlooked because of the ubiquitous flying males. 
+            The distruption of developmental stages can have far greater consequences on the stability of populations than focus on the adults alone.
+            Everyone can take measures to create better habitats for fireflies by reducing the amount of light spillage from homes at night and leaving sections of their property unmanicured. 
+            Even though fireflies are not on the endangered species list, they can benefit from human stewardship. 
+            The firefly is a charismatic organism, a source of cultural and scientific inspiration, and an important reminder to turn off the lights. 
+        </p>
 
     </body>
 </html>
