Add bibliography ordered list

--- a/fireflies essay HTML.html
+++ b/fireflies essay HTML.html
@@ -213,3 +213,69 @@
 
     </body>
 </html>
+
+<html>
+    <head>
+        <title>
+            Bibliography 
+        </title>
+    </head>
+    <body>
+        <h2>
+            References APA style
+        </h2>
+        <ol>
+            <li>
+                Pechenik, Jan. A. (2015). <i>Biology of the Invertebrates Seventh Edition.</i> New York, New York: McGraw-Hill Global Education Holdings LLC.
+            </li>
+            <li>
+                Imes, Rick. (1996). <i>Insects: The Practical Guide to Entomology.</i> London, England: Quantum Books Ltd.
+            </li>
+            <li>
+                Faust, L. F. (2017). <i>Fireflies, Glow-worms, and Lightning Bugs: Identification and Natural History of the Fireflies of the Eastern and Central United States and Canada.</i> 
+                Athens, Georgia: University of Georgia Press.
+            </li>
+            <li>
+                Lewis, Sara. (2016). <i>Silent Sparks: The Wondrous World of Fireflies.</i> Princeton, New Jersey: Princeton University Press.
+            </li>
+            <li>
+                Luk, S.P.L., Marshall, S.A., & Branham, M.A. (2011). The Fireflies of Ontario (Coleoptera: Lampyridae). <i>Canadian Journal of Arthropod Identification, </i>(No.16).
+            </li>
+            <li>
+                Iowa State University Entomology Department. (2004, Feb.). <i>Family Lampyridae-Fireflies.</i> Retrieved from https://bugguide.net/node/view/85 
+            </li>
+            <li>
+                Rogers, K. (2007). Firefly. In <i>Britannica Academic.</i> Retrieved from https://academic-eb-com.aurarialibrary.idk.oclc.org/levels/collegiate/article/firefly/34340
+            </li>
+            <li>
+                Branchini, B. [American Chemical Society]. (2015, July 21). <i>How do fireflies glow?- ACS Headline Science.</i> [Video File]. Retrieved from https://www.youtube.com/watch?v=ptPMwZK2-yM 
+            </li>
+            <li>
+                McDermott, F.A. (1910). Physiologic light. <i>Popular Science Monthly, Volume 77.</i> 
+            </li>
+            <li>
+                McDermott, F.A. (1911). Why Do Certain Living Forms Produce Light?. <i>Popular Science Monthly, Volume 79.</i>
+            </li>
+            <li>
+                Myers, P., R. Espinosa, C.S. Parr, T. Jones, G.S. Hammond, and T.A. Dewey. (2018). <i>Lampyridae: fireflies, glow worms, lightning bugs, lightningbugs.</i>
+                Retrieved from https://animaldiversity.org/accounts/Lampyridae/classification/#Lampyridae
+            </li>
+            <li>
+                (2018, June 26). <i>Big Dipper Firefly (Photinus pyralis).</i> Retrieved from https://www.insectidentification.org/insect-description.asp?identification=Big-Dipper-Firefly 
+            </li>
+            <li>
+                Loncraine, J., Filatsch, I., J., Dohrn, M. (2016). <i>David Attenborough's Life That Glows.</i> [TV Movie, Video file]. Retrieved from http://www.youtube.com/watch?v=VNxYcsBNol 
+            </li>
+            <li>
+                Weissmann, M. (personal communication, October 17, 2018). Consultation on firefly identification.
+            </li>
+            <li>
+                Mass Audobon. (2018). <i>Firefly Watch Citizen Science Project.</i> Retrieved from http://www.massaudobon.org/get-involved/citizen-science/firefly-watch 
+            </li>
+            <li>
+                KQED San Francisco, PBS Digital Studios. [Deep Look]. (2018, February 27). <i>So...Sometimes Fireflies Eat Other Fireflies- Deep Look.</i> [Video File]. Retrieved from https://wwww.youtube.com/watch?v=oWdCMFvgFbo 
+            </li>
+        </ol>
+    </body>
+</html>
+
