Add links to section headings

--- a/fireflies essay HTML.html
+++ b/fireflies essay HTML.html
@@ -3,10 +3,21 @@
         <title> Invertebrate Zoology Essay: Fireflies  </title>
     </head>
     <body>
-        <h1>
+        <h1 id="top">
             Fireflies: A Short Natural History
         </h1>
-        <h2>
+        <h2>Table of Contents</h2>
+        <ul>
+            <li><a href="#Introduction: Distribution, Taxonomy, and Flashing Behavior">Introduction: Distribution, Taxonomy, and Flashing Behavior</a></li>
+            <li><a href="#General Beetle Anatomy">General Beetle Anatomy</a></li>
+            <li><a href="#Bioluminescent Communication">Bioluminescent Communication</a></li>
+            <li><a href="#Lampyridae Anatomy, Morphology, and Identification">Lampyridae Anatomy, Morphology, and Identification</a></li>
+            <li><a href="#Lampyridae Lifecycle">Lampyridae Lifecycle</a></li>
+            <li><a href="#Chemistry of Bioluminescence">Chemistry of Bioluminescence</a></li>
+            <li><a href="#Conclusion: Threats and Conservation">Conclusion: Threats and Conservation</a></li>
+            <li><a href="#Bibliography: APA style">Bibliography: APA style</a></li>
+        </ul>
+        <h2 id="Introduction: Distribution, Taxonomy, and Flashing Behavior">
             Introduction: Distribution, Taxonomy, and Flashing Behavior. 
         </h2>
         <p> There are more than 2,000 identified species of firefly, 110 genera worldwide, found everywhere except Antarctica.
@@ -45,7 +56,7 @@
             <cite>(Faust, 2017)(Lewis, 2016)(Luk, Marshall, Branham, 2011)</cite>. 
         </p>
 
-        <h2>
+        <h2 id="General Beetle Anatomy">
             General Beetle Anatomy
         </h2>
         <p>
@@ -57,7 +68,7 @@
             They also have antennae between two prominent compound eyes<cite>(Pechenik, 2015)(insectID.org, 2018)</cite>.
         </p>
 
-        <h2>
+        <h2 id="Bioluminescent Communication">
                 Bioluminescent Communication
         </h2>
         <p>
@@ -87,7 +98,7 @@
             evolution, not a measure of relatedness. Organisms from fungus to dinoflagellates to cockroaches have all separately produced lineages with bioluminescence
              because it turned out to be a useful evolutionary adaptation <cite>(Loncraine, Filatsch, Dohrn, 2016)(Pechenik, 2015)(Imes, 1996)</cite>. 
         </p>
-        <h2>
+        <h2 id="Lampyridae Anatomy, Morphology, and Identification">
             Lampyridae Anatomy, Morphology, and Identification
         </h2>
         <p>
@@ -123,7 +134,7 @@
             Even when powdered and stored for a period of time, light could be produced with some help from chemical reagents<cite>(McDermott, 1910)</cite>.  
         </p>
 
-        <h2>
+        <h2 id="Lampyridae Lifecycle">
             Lampyridae Lifecycle
         </h2>
         <p>
@@ -152,7 +163,7 @@
             Turns out the cardiac glycosides in fireflies are extremely similar to the digitalis found in the foxglove plant. These drugs are used to treat congestive heart failure, but they 
             are still basically a steroidal stimulant, so the Brunei certainly were feeling something. Consuming too many fireflies can kill a human, as any high dose of a chemical can turn deadly.  
         </p>
-<h2>
+        <h2 id="Chemistry of Bioluminescence">
             Chemistry of Bioluminescence
         </h2>
         <p>
@@ -190,7 +201,7 @@
             Branchini and other collaborators are next looking into the chemistry of bioluminescence in worms and plankton(Branchini, 2015)(McDermott, 1911).
         </p>
 
-        <h2>
+        <h2 id="Conclusion: Threats and Conservation">
             Conclusion: Threats and Conservation
         </h2>
         <p>
@@ -210,19 +221,9 @@
             Even though fireflies are not on the endangered species list, they can benefit from human stewardship. 
             The firefly is a charismatic organism, a source of cultural and scientific inspiration, and an important reminder to turn off the lights. 
         </p>
-
-    </body>
-</html>
-
-<html>
-    <head>
-        <title>
-            Bibliography 
-        </title>
-    </head>
-    <body>
-        <h2>
-            References APA style
+ 
+        <h2 id="Bibliography: APA style">
+            Bibliography: APA style
         </h2>
         <ol>
             <li>
@@ -276,6 +277,8 @@
                 KQED San Francisco, PBS Digital Studios. [Deep Look]. (2018, February 27). <i>So...Sometimes Fireflies Eat Other Fireflies- Deep Look.</i> [Video File]. Retrieved from https://wwww.youtube.com/watch?v=oWdCMFvgFbo 
             </li>
         </ol>
+
+        <p><a href="#top">Top of Page</a></p>
+        <p><a href="mailto:cobrienstoffa@gmail.com">Contact the Author</a>
     </body>
 </html>
-
